# Langchain-Learning

./: 1_simple_graph.ipynb  2_graph_with_condition.ipynb  3_chatbot.ipynb  4_chatbot_tool_call.ipynb  5_chatbot_with_memory.ipynb  McpAgent.py  McpClient.py  pyproject.toml
Agent/: McpAgent_V2.py  McpClient_V2.py
